# toygene

./: .travis.yml  LICENSE  README.md  pyproject.toml  tox.ini
docs/: tutorial.ipynb
tests/: test_interval_util.py  test_segment_util.py
toygene/: interval_util.py  segment_util.py
toygene/read/: __init__.py  _render.py  _style.py  _toyread.py
